--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,9 @@ services:
       oracle-xe:
         condition: service_healthy
     environment:
-      PORT: ${API_PORT:-4000}
+      API_PORT: ${API_PORT:-4000}
       DB_USER: ${DB_USER:-app_user}
       DB_PASSWORD: ${DB_PASSWORD:-change_me}
       DB_CONNECT_STRING: oracle-xe:1521/XEPDB1
     ports:
-      - "${API_PORT:-4000}:4000"
+      - "${API_PORT:-4000}:${API_PORT:-4000}"
