--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: server/package-lock.json
       - run: cd server && npm ci && npm run build
       - uses: actions/setup-java@v4
         with:
